--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "require": {
         "php": "^7.3|^8.0",
         "bmatovu/multi-auth": "^10.0",
+        "coinbase/coinbase-commerce": "^1.0",
         "doctrine/dbal": "^3.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "6.5",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
-        "shakurov/coinbase": "^0.7.7",
         "victorybiz/laravel-crypto-payment-gateway": "^1.2",
         "yajra/laravel-datatables-oracle": "^9.21.2"
     },
